# fastapi

./: .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  logger.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 114e45d9c065_auto_vote.py  16b773d8d2db_add_users_table.py  17849fbd7e9c_add_content_column_to_posts_table.py  3f5393486a1f_add_last_few_columns_to_posts_table.py  4155226e972e_add_phone_number.py  4dd806910dcb_add_foreign_key_to_posts_table.py  577ce78ddaf1_auto_vote.py  6b30b6f8eb8f_create_posts_table.py  7e022f58de83_add_content_column_to_posts_table.py  82bf18ef8ea9_add_user_table.py  974d16d453fe_add_user_table.py  bb3bfc72e150_create_posts_table.py  f3b23c3e1a2c_add_foreign_key_to_posts_table.py  f6db4b350a93_add_last_few_columns_to_posts_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
