[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = "This is fastapi application"
authors = ["Anu1996rag <anuragpatils1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
anyio = "^3.6.2"
attrs = "^22.1.0"
bcrypt = "^4.0.1"
certifi = "^2022.9.24"
cffi = "^1.15.1"
charset-normalizer = "^3.0.0"
click = "^8.1.3"
cryptography = "^38.0.3"
dnspython = "^2.2.1"
ecdsa = "^0.18.0"
email-validator = "^1.3.0"
exceptiongroup = "^1.0.4"
greenlet = "^2.0.1"
gunicorn = "^20.1.0"
h11 = "^0.14.0"
httpcore = "^0.16.0"
idna = "^3.4"
iniconfig = "^1.1.1"
loguru = "^0.6.0"
mako = "^1.2.4"
markupsafe = "^2.1.1"
packaging = "^21.3"
passlib = "^1.7.4"
patch-env = "^1.0.0"
pluggy = "^1.0.0"
psycopg2 = "^2.9.5"
pyasn1 = "^0.4.8"
pycparser = "^2.21"
pydantic = "^1.10.2"
pyparsing = "^3.0.9"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
rfc3986 = "^2.0.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^1.4.44"
starlette = "^0.21.0"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"
urllib3 = "^1.26.12"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
anyio = "^3.6.2"
attrs = "^22.1.0"
bcrypt = "^4.0.1"
certifi = "^2022.9.24"
cffi = "^1.15.1"
charset-normalizer = "^3.0.0"
click = "^8.1.3"
cryptography = "^38.0.3"
dnspython = "^2.2.1"
ecdsa = "^0.18.0"
email-validator = "^1.3.0"
exceptiongroup = "^1.0.4"
greenlet = "^2.0.1"
gunicorn = "^20.1.0"
h11 = "^0.14.0"
httpcore = "^0.16.0"
idna = "^3.4"
iniconfig = "^1.1.1"
loguru = "^0.6.0"
mako = "^1.2.4"
markupsafe = "^2.1.1"
packaging = "^21.3"
passlib = "^1.7.4"
patch-env = "^1.0.0"
pluggy = "^1.0.0"
psycopg2 = "^2.9.5"
pyasn1 = "^0.4.8"
pycparser = "^2.21"
pydantic = "^1.10.2"
pyparsing = "^3.0.9"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
rfc3986 = "^2.0.0"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
sqlalchemy = "^1.4.44"
starlette = "^0.21.0"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"
urllib3 = "^1.26.12"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
